--- a/carshop/README
+++ b/carshop/README
@@ -3,7 +3,9 @@ Carshop Backend
 Django-based backend for Carshop
 
 Admin:
+ http://127.0.0.1:8000/admin/
  admin/admin
+ to play with cars/dealers/models etc
 
 EndPoints:
 
