--- a/carshop/README
+++ b/carshop/README
@@ -139,3 +139,9 @@ RESPONSE:
         }
     }
 ]
+
+Installation:
+
+cd dealer/carshop
+pip install -r requirements.txt
+python3 manage.py runserver
